website/websites/u32q/code/fannkuchredux.1.gpp.log

Tue, 28 Apr 2015 16:57:33 GMT

MAKE:
/usr/bin/g++ -c -pipe -O3 -fomit-frame-pointer -march=native  -pthread fannkuchredux.c++ -o fannkuchredux.c++.o &&  \
        /usr/bin/g++ fannkuchredux.c++.o -o fannkuchredux.gpp_run -lpthread -lboost_system -lboost_thread 
In file included from /usr/include/c++/4.9/future:35:0,
                 from fannkuchredux.c++:10:
/usr/include/c++/4.9/bits/c++0x_warning.h:32:2: error: #error This file requires compiler and library support for the ISO C++ 2011 standard. This support is currently experimental, and must be enabled with the -std=c++11 or -std=gnu++11 compiler options.
 #error This file requires compiler and library support for the \
  ^
fannkuchredux.c++: In constructor ‘Perm::Perm(unsigned int)’:
fannkuchredux.c++:40:7: warning: extended initializer lists only available with -std=c++11 or -std=gnu++11
 : cnt {0},n(n),permcount(0)
       ^
fannkuchredux.c++: In member function ‘Perm::P Perm::get(int)’:
fannkuchredux.c++:53:53: warning: lambda expressions only available with -std=c++11 or -std=gnu++11
     std::generate(perm.p,perm.p+n,[&i](){return ++i;});
                                                     ^
fannkuchredux.c++:53:54: error: no matching function for call to ‘generate(int_t [16], int_t*, Perm::get(int)::<lambda()>)’
     std::generate(perm.p,perm.p+n,[&i](){return ++i;});
                                                      ^
fannkuchredux.c++:53:54: note: candidate is:
In file included from /usr/include/c++/4.9/algorithm:62:0,
                 from fannkuchredux.c++:9:
/usr/include/c++/4.9/bits/stl_algo.h:4286:5: note: template<class _FIter, class _Generator> void std::generate(_FIter, _FIter, _Generator)
     generate(_ForwardIterator __first, _ForwardIterator __last,
     ^
/usr/include/c++/4.9/bits/stl_algo.h:4286:5: note:   template argument deduction/substitution failed:
fannkuchredux.c++: In substitution of ‘template<class _FIter, class _Generator> void std::generate(_FIter, _FIter, _Generator) [with _FIter = unsigned char*; _Generator = Perm::get(int)::<lambda()>]’:
fannkuchredux.c++:53:54:   required from here
fannkuchredux.c++:53:54: error: template argument for ‘template<class _FIter, class _Generator> void std::generate(_FIter, _FIter, _Generator)’ uses local type ‘Perm::get(int)::<lambda()>’
     std::generate(perm.p,perm.p+n,[&i](){return ++i;});
                                                      ^
fannkuchredux.c++:53:54: error:   trying to instantiate ‘template<class _FIter, class _Generator> void std::generate(_FIter, _FIter, _Generator)’
fannkuchredux.c++: In function ‘Result fannkuch(int)’:
fannkuchredux.c++:108:4: error: ‘future’ is not a member of ‘std’
    std::future<Result> ft[N];
    ^
fannkuchredux.c++:108:22: error: expected primary-expression before ‘>’ token
    std::future<Result> ft[N];
                      ^
fannkuchredux.c++:108:24: error: ‘ft’ was not declared in this scope
    std::future<Result> ft[N];
                        ^
fannkuchredux.c++:115:15: error: ‘async’ is not a member of ‘std’
       ft[i] = std::async(std::launch::async,work,perm,j,max);
               ^
fannkuchredux.c++:115:31: error: ‘std::launch’ has not been declared
       ft[i] = std::async(std::launch::async,work,perm,j,max);
                               ^
fannkuchredux.c++:119:12: error: ‘r’ does not name a type
       auto r = ft[i].get();
            ^
fannkuchredux.c++:120:23: error: ‘r’ was not declared in this scope
       tmp.checksum += r.checksum;
                       ^
/home/dunham/benchmarksgame/nanobench/makefiles/u32q.programs.Makefile:67: recipe for target 'fannkuchredux.gpp_run' failed
make: [fannkuchredux.gpp_run] Error 1 (ignored)
rm fannkuchredux.c++
0.20s to complete and log all make actions

COMMAND LINE:
./fannkuchredux.gpp_run 10

MAKE ERROR 

